--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@emailjs/browser": "^4.4.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "chart.js": "^4.4.8",
+    "dayjs": "^1.11.13",
+    "emailjs-com": "^3.2.0",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.7.4",
     "grapesjs": "^0.22.5",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
@@ -25,11 +30,14 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-quill": "^0.0.2",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
