--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
+    "predeploy": "npm run build && npm run export",
+    "deploy": "firebase deploy --only hosting",
     "lint": "next lint"
+  },
+  "resolutions": {
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "@react-page/editor/react": "^18.2.0"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@react-page/plugins-image": "^5.4.5",
+    "@react-page/plugins-slate": "^5.4.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "chart.js": "^4.4.8",
     "dayjs": "^1.11.13",
@@ -22,14 +34,19 @@
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.7.4",
     "grapesjs": "^0.22.5",
+    "grapesjs-preset-webpage": "^1.0.3",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.477.0",
     "next": "^15.2.1",
+    "next-transpile-modules": "^10.0.1",
     "nodemailer": "^6.10.0",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-quill": "^0.0.2",
