--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@react-page/plugins-image": "^5.4.5",
-    "@react-page/plugins-slate": "^5.4.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.7",
     "chart.js": "^4.4.8",
     "dayjs": "^1.11.13",
     "emailjs-com": "^3.2.0",
@@ -51,6 +51,9 @@
     "react-icons": "^5.5.0",
     "react-quill": "^0.0.2",
     "xlsx": "^0.18.5"
+  },
+  "optionalDependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
