ci: force tailwindcss-oxide to linux binary on CI

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   },
 
 "overrides": {
-    "@tailwindcss/oxide": "@tailwindcss/oxide-linux-x64-gnu"
+    "@tailwindcss/oxide": "@tailwindcss/oxide-linux-x64-gnu",
+    "@tailwindcss/oxide-win32-x64-msvc": "@tailwindcss/oxide-linux-x64-gnu"
   },
 
   "devDependencies": {
